--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,3 @@
-@import './base/_fonts';
-
-* {
-  font-family: 'Noto Sans KR', sans-serif;
-}
-
+@import "./base/_fonts";
+@import "./base/_normalize";
+@import "./base/_reset";
